--- a/checkark/app/src/main/res/layout/activity_main.xml
+++ b/checkark/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:id="@+id/tv_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="연결중"
+        android:text="연결중입니다."
+        android:gravity="center"
         android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="30dp"
